<resources>

    <string name="app_name">Rzeszów</string>

    <!-- navigation drawer -->
    <string name="navigation_drawer_open">Otwórz menu</string>
    <string name="navigation_drawer_close">Zamknij menu</string>

    <!-- menu header -->
    <string name="header_main">RZESZÓW</string>
    <string name="header_sub">Stolica innowacji</string>
    <string name="header_logo_desc">logo miasta Rzeszowa</string>

    <!-- menus -->
    <string name="menu_main_item1">Strona główna</string>
    <string name="menu_main_item2">Rynek</string>
    <string name="menu_main_item3">Centrum</string>
    <string name="menu_main_item4">Zamek</string>
    <string name="menu_main_item5">Różne</string>
    <string name="menu_main_item6">Linki</string>
    <string name="menu_main_item7">Zamknij</string>
    <string name="menu_main_title1">Galerie</string>

    <string name="menu_home_item1">Zamknij</string>

    <string name="menu_galleries_item1">Widok siatki</string>
    <string name="menu_galleries_item2">Widok pojedynczy</string>

    <!-- home page -->
    <string name="home_info">Rzeszów to największe miasto w Polsce południowo-wschodniej, stolica Podkarpacia. Powstało już w XIV wieku i od tego czasu prężnie się rozwijało. Choć w czasie II wojny światowej zostało bardzo osłabione wciąż ma ogromny potencjał. Jest najważniejszym ośrodkiem gospodarczym, kulturalnym i komunikacyjnym Podkarpacia. Na terenie Rzeszowa znajduje się lotnisko międzynarodowe. Dzięki obecności wielu szkół wyższych, w tym Uniwersytetu Rzeszowskiego, jest też ważnym punktem oświatowym na mapie Polski, skupiającym ok. 50 tys. studentów.</string>
    <string name="home_header">Rzeszów - Stolica innowacji</string>
    <string name="home_header2">Przejdź do galerii:</string>
    <string name="home_square_desc">rynek w centrum miasta Rzeszowa</string>
    <string name="home_logo_desc">logo miasta Rzeszowa</string>
    <string name="home_gallery_square">Rynek</string>
    <string name="home_gallery_castle">Zamek</string>
    <string name="home_gallery_center">Centrum</string>
    <string name="home_gallery_other">Różne</string>
    <string name="home_gallery_square_desc">Rzeszowski rynek</string>
    <string name="home_gallery_castle_desc">Zamek Lubomirskich</string>
    <string name="home_gallery_center_desc">Pomnik w centrum Rzeszowa</string>
    <string name="home_gallery_other_desc">Most Mazowieckiego</string>
    <string name="home_toolbar_title">Rzeszów</string>

    <!-- links page -->
    <string name="links_header">Więcej informacji o Rzeszowie:</string>
    <string name="links_title_1">Serwis informacyjny urzędu miasta Rzeszowa:</string>
    <string name="links_subtitle_1">http://www.rzeszow.pl/</string>
    <string name="links_desc_1">logo serwisu informacyjnego urzędu miasta Rzeszowa</string>
    <string name="links_title_2">Portal informacyjny Rzeszów News:</string>
    <string name="links_subtitle_2">https://rzeszow-news.pl/</string>
    <string name="links_desc_2">logo portalu informacyjnego Rzeszów News</string>
    <string name="links_toolbar_title">Rzeszów</string>

    <!-- galleries grid view -->
    <string name="galleries_grid_view_desc">Zdjęcie z galerii</string>

    <!-- galleries -->
    <string name="gallery_switch_title">Pokaz slajdów: </string>
    <string name="gallery_time_list_title">Czas: </string>
    <string-array name="gallery_time_list_items">
        <item>1 s</item>
        <item>2 s</item>
        <item>3 s</item>
        <item>4 s</item>
        <item>5 s</item>
    </string-array>

    <!-- gallery - square page -->
    <string name="square_header">Rzeszowski rynek:</string>
    <string name="square_img_desc">Rzeszowski rynek - zdjęcie z galerii</string>
    <string name="square_img_counter">%1$d / %2$d</string>
    <string name="square_toolbar_title">Rynek - galeria</string>

    <!-- gallery - center page -->
    <string name="center_header">Centrum Rzeszowa:</string>
    <string name="center_img_desc">Rzeszowskie centrum - zdjęcie z galerii</string>
    <string name="center_img_counter">%1$d / %2$d</string>
    <string name="center_toolbar_title">Centrum - galeria</string>

    <!-- gallery - castle page -->
    <string name="castle_header">Zamek Lubomirskich:</string>
    <string name="castle_img_desc">Zamek Lubomirskich - zdjęcie z galerii</string>
    <string name="castle_img_counter">%1$d / %2$d</string>
    <string name="castle_toolbar_title">Zamek - galeria</string>

    <!-- gallery - other page -->
    <string name="other_header">Rzeszowskie widoki:</string>
    <string name="other_img_desc">Rzeszów - zdjęcie z galerii</string>
    <string name="other_img_counter">%1$d / %2$d</string>
    <string name="other_toolbar_title">Różne - galeria</string>

</resources>
